[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scenario_and_items/sombra.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/spritesheet/idle.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/enemy/spritesheet/walk.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/spritesheet/hit.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 48.3333
height = 106.667

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation_enemy:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation_enemy:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation_enemy:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_layer = 4
collision_mask = 32
script = ExtResource( 3 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 1, 165 )
texture = ExtResource( 1 )

[node name="enemy_img" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 20

[node name="foot_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 148.333 )
shape = SubResource( 1 )

[node name="enemy_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="enemy_shape" type="CollisionShape2D" parent="enemy_area"]
position = Vector2( 3.33333, 63.3333 )
shape = SubResource( 2 )

[node name="animation_enemy" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 3.5
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 6 )

[node name="enemy_ray_cast" type="RayCast2D" parent="."]
position = Vector2( 70, 150 )
enabled = true
collision_mask = 32

[node name="enemy_ray_cast_front" type="RayCast2D" parent="."]
position = Vector2( 68.3333, 81.6667 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 32

[connection signal="body_entered" from="enemy_area" to="." method="_on_enemy_area_body_entered"]
[connection signal="animation_finished" from="animation_enemy" to="." method="_on_animation_enemy_animation_finished"]
